# PythonChat

./: main.py  pyproject.toml
static/css/: styles.css
templates/: base.html  chat.html  index.html
